--- a/client/src/app/components/leftbar/leftbar.component.html
+++ b/client/src/app/components/leftbar/leftbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default sidebar left-bar" role="navigation">
+<nav *showItBootstrap="['sm','md','lg']" class="navbar navbar-default sidebar left-bar" role="navigation">
   <div class="container-fluid">
      <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
