--- a/client/src/app/components/timeline/timeline.component.html
+++ b/client/src/app/components/timeline/timeline.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <modal id="postDeleteConfirmation">
     <div class="modal">
       <div class="modal-body">
@@ -21,14 +21,14 @@
     <div class="modal-background"></div>
   </modal>
   <div class="row">
-    <div class="col-lg-9">
+    <div class="col-lg-12">
       <div class="panel-footer" style="max-width:1000px;">
         <div class="tabbable-panel">
           <div class="tabbable-line">
             <div class="tab-content">
               <div class="tab-pane padding-15 active">
                 <div class="row timeline">
-                  <div class="col-sm-12">
+                  <div>
                     <div class="widget-area no-padding blank">
                       <div class="status-upload">
                         <form>
@@ -66,7 +66,7 @@
 
                     </div>
                   </div>
-                  <div class="col-sm-12">
+                  <div class="col-sm-12" *showItBootstrap="['md','lg']">
                     <div class="widget-area no-padding blank">
                       <div class="padding-left">
                         <i class="fa fa-users" aria-hidden="true"></i>
